--- a/.github/ISSUE_TEMPLATE/epic.yml
+++ b/.github/ISSUE_TEMPLATE/epic.yml
@@ -12,7 +12,7 @@ body:
       description: "プロジェクトで管理するEpicの名前を入力してください"
       placeholder: "例：ユーザープロファイル機能"
     validations:
-      required: false
+      required: true
 
   - type: textarea
     id: epic-description
@@ -33,13 +33,13 @@ body:
         2. ユーザーは自分のプロファイル情報を編集できる
         3. ユーザーは自分のプロファイル情報を更新できる
     validations:
-      required: false
+      required: true
 
   - type: textarea
     id: acceptance-criteria
     attributes:
       label: 受け入れ基準
-      description: "このエピックが完了するための受け入れ基準を定義してください"
+      description: "(任意)このエピックが完了するための受け入れ基準を定義してください"
       placeholder: |
         1. プロファイル情報の表示が正確であること
         2. 編集機能が動作し、ユーザーがプロファイル情報を変更できること
