rename bug template

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,5 +1,5 @@
 name: 不具合報告
-description: 不具合の報告
+description: 不具合の報告用のチケットを作成する
 title: "🐛 Bug: "
 labels: ["bug"]
 assignees:
@@ -42,16 +42,17 @@ body:
         4. エラーが表示される
     validations:
       required: true
-  - type: textarea
+  - type: input
     id: frequency
     attributes:
       label: 発生頻度
-      description: 分数表記 (X/Y)で記載する。再現頻度がバグ解析の重要な手がかりになることがあります。
-      placeholder: |-
-        <!-- 記載例 -->
-        <!-- 再現率100%: 5/5 -->
-        <!-- 再現率40% : 2/5 -->
-        <!-- 再現率0%  : 0/5 -->
+      description: |-
+        分数表記 (X/Y)で記載する。再現頻度がバグ解析の重要な手がかりになることがあります。
+        --- 記載例 ---
+        再現率100%: 5/5
+        再現率40% : 2/5
+        再現率0%  : 0/5
+      placeholder: 0/5
     validations:
       required: true
   - type: textarea
