--- a/.github/ISSUE_TEMPLATE/refactoring.yml
+++ b/.github/ISSUE_TEMPLATE/refactoring.yml
@@ -8,7 +8,10 @@ body:
     attributes:
       label: リファクタリングの説明
       description: "リファクタリングの目的、背景、および提案する変更について説明してください"
-      placeholder: "Userモデルのバリデーションロジックが複雑で理解しにくくなっているため、リファクタリングを行い、可読性と保守性を向上させる提案する変更は、バリデーションロジックをヘルパーメソッドに分割し、モデル内での役割を明確にすることです"
+      placeholder: |-
+        Userモデルのバリデーションロジックが複雑で理解しにくくなっているため、可読性と保守性を向上させる
+        具体的には
+          バリデーションロジックをヘルパーメソッドに分割し、モデル内での役割を明確にする
     validations:
       required: true
 
